backend/src/public/css/unused/draftyspreadsheet.css
/* ... */
.table thead th, #table-container table thead th {
    vertical-align: bottom;
    border-bottom: 2px solid #dee2e6;
}

.table-bordered, #table-container table {
    border: 1px solid #dee2e6;
}

.table-bordered th, #table-container table th, .table-bordered td, #table-container table td {
    border: 1px solid #dee2e6;
}

.table-bordered thead th, #table-container table thead th, .table-bordered thead td, #table-container table thead td {
    border-bottom-width: 2px;
}

.table-striped tbody tr:nth-of-type(odd), #table-container table tbody tr:nth-of-type(odd) {
    background-color: rgba(0, 0, 0, 0.05);
}

.table .thead-light th, #table-container table .thead-light th, #table-container table thead th, #table-container table tfoot th, #table-container table tfoot tr:nth-child(1) th {
    color: #495057;
    background-color: #e9ecef;
    border-color: #dee2e6;
}

.form-control, #table-container table thead th.column-search input, #table-container table tfoot th.column-search input, #table-container table tfoot tr:nth-child(1) th input {
    display: block;
    width: 100%;
    height: calc(1.5em + 0.75rem + 2px);
    padding: 0.375rem 0.75rem;
    font-size: 1rem;
    font-weight: 400;
    line-height: 1.5;
    color: #495057;
    background-color: #fff;
    background-clip: padding-box;
    border: 1px solid #ced4da;
    border-radius: 0.25rem;
    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
}

.form-control::placeholder, #table-container table thead th.column-search input::placeholder, #table-container table tfoot th.column-search input::placeholder, #table-container table tfoot tr:nth-child(1) th input::placeholder {
    color: #6c757d;
    opacity: 1;
}

.btn, nav .navbar-toggler, .contextmenu button, form > [type="submit"], #table-container > div #table-cell-input-form #locate-cell, #table-container > div #table-cell-input-form #table-cell-input-save, #table-container table thead th .sort-btn, #table-container table tfoot th .sort-btn, #table-container table tfoot tr:nth-child(2) button#confirm-newrow, #table-container table tfoot tr:nth-child(2) button#discard-newrow, #table-container table tfoot tr:nth-child(2) button#close-newrow {
    display: inline-block;
    font-weight: 400;
    color: #212529;
    text-align: center;
    vertical-align: middle;
    user-select: none;
    background-color: transparent;
    border: 1px solid transparent;
    padding: 0.375rem 0.75rem;
    font-size: 1rem;
    line-height: 1.5;
    border-radius: 0.25rem;
    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
}

.btn-sm, .btn-group-sm > .btn, nav .btn-group-sm > .navbar-toggler, .contextmenu .btn-group-sm > button, form.btn-group-sm > [type="submit"], #table-container table tfoot tr:nth-child(2) .btn-group-sm > button#confirm-newrow, #table-container table tfoot tr:nth-child(2) .btn-group-sm > button#discard-newrow, #table-container table tfoot tr:nth-child(2) .btn-group-sm > button#close-newrow, nav .navbar-nav-sm li #list-sheets-horizontal button, #table-container > div #table-cell-input-form #locate-cell, #table-container > div #table-cell-input-form #table-cell-input-save, #table-container table thead th .sort-btn, #table-container table tfoot th .sort-btn {
    padding: 0.25rem 0.5rem;
    font-size: 0.875rem;
    line-height: 1.5;
    border-radius: 0.2rem;
}

.collapse:not(.show) {
    display: none;
}

.dropup, .dropright, .dropdown, .dropleft {
    position: relative;
}

.dropdown-menu {
    position: absolute;
    top: 100%;
    left: 0;
    z-index: 1000;
    display: none;
    float: left;
    min-width: 10rem;
    padding: 0.5rem 0;
    margin: 0.125rem 0 0;
    font-size: 1rem;
    color: #212529;
    text-align: left;
    list-style: none;
    background-color: #fff;
    background-clip: padding-box;
    border: 1px solid rgba(0, 0, 0, 0.15);
    border-radius: 0.25rem;
}

.dropdown-menu-right {
    right: 0;
    left: auto;
}

.btn-group, nav .navbar-nav-sm li #list-sheets-horizontal, .btn-group-vertical, .contextmenu {
    position: relative;
    display: inline-flex;
    vertical-align: middle;
}

.btn-group-vertical, .contextmenu {
    flex-direction: column;
    align-items: flex-start;
    justify-content: center;
}

.navbar, nav {
    position: relative;
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: space-between;
    padding: 0.5rem 1rem;
}

.navbar-brand {
    display: inline-block;
    padding-top: 0.3125rem;
    padding-bottom: 0.3125rem;
    margin-right: 1rem;
    font-size: 1.25rem;
    line-height: inherit;
    white-space: nowrap;
}

.navbar-nav {
    display: flex;
    flex-direction: column;
    padding-left: 0;
    margin-bottom: 0;
    list-style: none;
}

.navbar-nav .dropdown-menu {
    position: static;
    float: none;
}

.navbar-collapse {
    flex-basis: 100%;
    flex-grow: 1;
    align-items: center;
}

.navbar-toggler {
    padding: 0.25rem 0.75rem;
    font-size: 1.25rem;
    line-height: 1;
    background-color: transparent;
    border: 1px solid transparent;
    border-radius: 0.25rem;
}
/* ... */

